--- a/charts/argo-rollouts/templates/crds/rollout-crd.yaml
+++ b/charts/argo-rollouts/templates/crds/rollout-crd.yaml
@@ -89,6 +89,12 @@ spec:
               revisionHistoryLimit:
                 format: int32
                 type: integer
+              rollbackWindow:
+                properties:
+                  revisions:
+                    format: int32
+                    type: integer
+                type: object
               selector:
                 properties:
                   matchExpressions:
@@ -397,6 +403,9 @@ spec:
                         - type: integer
                         - type: string
                         x-kubernetes-int-or-string: true
+                      minPodsPerReplicaSet:
+                        format: int32
+                        type: integer
                       pingPong:
                         properties:
                           pingService:
@@ -713,6 +722,20 @@ spec:
                             required:
                             - mappings
                             type: object
+                          apisix:
+                            properties:
+                              route:
+                                properties:
+                                  name:
+                                    type: string
+                                  rules:
+                                    items:
+                                      type: string
+                                    type: array
+                                required:
+                                - name
+                                type: object
+                            type: object
                           appMesh:
                             properties:
                               virtualNodeGroup:
@@ -770,6 +793,14 @@ spec:
                                     items:
                                       type: string
                                     type: array
+                                  tcpRoutes:
+                                    items:
+                                      properties:
+                                        port:
+                                          format: int64
+                                          type: integer
+                                      type: object
+                                    type: array
                                   tlsRoutes:
                                     items:
                                       properties:
@@ -793,6 +824,14 @@ spec:
                                     routes:
                                       items:
                                         type: string
+                                      type: array
+                                    tcpRoutes:
+                                      items:
+                                        properties:
+                                          port:
+                                            format: int64
+                                            type: integer
+                                        type: object
                                       type: array
                                     tlsRoutes:
                                       items:
