minor-changes in chart.yaml and values.yaml

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,4 +23,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: Update Argo CD to v2.5.7"
+    - "[Changed]: Update Argo CD extensions to v0.2.1"
