--- a/charts/argocd-image-updater/Chart.yaml
+++ b/charts/argocd-image-updater/Chart.yaml
@@ -15,4 +15,4 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)
+    - "[Changed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)"
