--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -392,6 +392,8 @@ configs:
   secret:
     # -- Create the argocd-secret
     createSecret: true
+    # -- Labels to be added to argocd-secret
+    labels: {}
     # -- Annotations to be added to argocd-secret
     annotations: {}
 
