--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -340,44 +340,17 @@ spec:
       initContainers:
         {{- tpl (toYaml .) $ | nindent 6 }}
       {{- end }}
-      {{- if or .Values.server.nodeSelector .Values.global.nodeSelector }}
-      {{- if .Values.server.nodeSelector }}
-      {{- with .Values.server.nodeSelector }}
+      {{- with .Values.server.nodeSelector | default .Values.global.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- else }}
-      {{- with .Values.global.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- end }}
-      {{- end }}
-      {{- if or .Values.server.tolerations .Values.global.tolerations }}
-      {{- if .Values.server.tolerations }}
-      {{- with .Values.server.tolerations }}
+      {{- with .Values.server.tolerations | default .Values.global.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- else }}
-      {{- with .Values.global.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- end }}
-      {{- end }}
-      {{- if or .Values.server.affinity .Values.global.affinity }}
-      {{- if .Values.server.affinity }}
-      {{- with .Values.server.affinity }}
+      {{- with .Values.server.affinity | default .Values.global.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- else }}
-      {{- with .Values.global.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- end }}
       {{- end }}
       {{- with .Values.server.topologySpreadConstraints }}
       topologySpreadConstraints:
