--- a/charts/argo-cd/templates/dex/deployment.yaml
+++ b/charts/argo-cd/templates/dex/deployment.yaml
@@ -138,44 +138,17 @@ spec:
       {{- with .Values.dex.initContainers }}
         {{- tpl (toYaml .) $ | nindent 6 }}
       {{- end }}
-      {{- if or .Values.dex.nodeSelector .Values.global.nodeSelector }}
-      {{- if .Values.dex.nodeSelector }}
-      {{- with .Values.dex.nodeSelector }}
+      {{- with .Values.dex.nodeSelector | default .Values.global.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- else }}
-      {{- with .Values.global.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- end }}
-      {{- end }}
-      {{- if or .Values.dex.tolerations .Values.global.tolerations }}
-      {{- if .Values.dex.tolerations }}
-      {{- with .Values.dex.tolerations }}
+      {{- with .Values.dex.tolerations | default .Values.global.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- else }}
-      {{- with .Values.global.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- end }}
-      {{- end }}
-      {{- if or .Values.dex.affinity .Values.global.affinity }}
-      {{- if .Values.dex.affinity }}
-      {{- with .Values.dex.affinity }}
+      {{- with .Values.dex.affinity | default .Values.global.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- else }}
-      {{- with .Values.global.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- end }}
       {{- end }}
       {{- with .Values.dex.topologySpreadConstraints }}
       topologySpreadConstraints:
