--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2826,7 +2826,7 @@ notifications:
     slack:
       # -- Enable slack bot
       ## You have to set secret.notifiers.slack.signingSecret
-      enabled: true
+      enabled: false
 
       ## Slack bot Pod Disruption Budget
       ## Ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
