Added a general flag providerRBAC.enabled to toggle all of the providers
Signed-off-by: Richard Johansson <richard.jimmy.johansson@gmail.com>

--- a/charts/argo-rollouts/templates/controller/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrole.yaml
@@ -154,7 +154,8 @@ rules:
   - update
   - patch
   - delete
-{{- if .Values.enabledProviders.istio }}
+{{- if .Values.providerRBAC.enabled }}
+{{- if .Values.providerRBAC.providers.istio }}
 # virtualservice/destinationrule access needed for using the Istio provider
 - apiGroups:
   - networking.istio.io
@@ -168,7 +169,7 @@ rules:
   - patch
   - list
 {{- end }}
-{{- if .Values.enabledProviders.smi }}
+{{- if .Values.providerRBAC.providers.smi }}
 # trafficsplit access needed for using the SMI provider
 - apiGroups:
   - split.smi-spec.io
@@ -181,7 +182,7 @@ rules:
   - update
   - patch
 {{- end }}
-{{- if .Values.enabledProviders.ambassador }}
+{{- if .Values.providerRBAC.providers.ambassador }}
 # ambassador access needed for Ambassador provider
 - apiGroups:
   - getambassador.io
@@ -197,7 +198,7 @@ rules:
   - list
   - delete
 {{- end }}
-{{- if .Values.enabledProviders.awsLoadBalancerController }}
+{{- if .Values.providerRBAC.providers.awsLoadBalancerController }}
 # Endpoints and TargetGroupBindings needed for ALB target group verification when using AWS Load Balancer Controller
 - apiGroups:
   - ""
@@ -213,7 +214,7 @@ rules:
   - list
   - get
 {{- end }}
-{{- if .Values.enabledProviders.awsAppMesh }}
+{{- if .Values.providerRBAC.providers.awsAppMesh }}
 # AppMesh virtualservices/virtualrouter CRD read-only access needed for using the App Mesh provider
 - apiGroups:
   - appmesh.k8s.aws
@@ -236,7 +237,7 @@ rules:
   - update
   - patch
 {{- end }}
-{{- if .Values.enabledProviders.traefik }}
+{{- if .Values.providerRBAC.providers.traefik }}
 # Traefik access needed when using the Traefik provider
 - apiGroups:
   - traefik.containo.us
@@ -246,5 +247,6 @@ rules:
   - watch
   - get
   - update
+{{- end }}
 {{- end }}
 {{- end }}
